# aya-examples

./: README.md
tcpconnect/: Cargo.toml  README.md
tcpconnect/tcpconnect/: Cargo.toml
tcpconnect/tcpconnect-common/: Cargo.toml
tcpconnect/tcpconnect-common/src/: lib.rs
tcpconnect/tcpconnect-ebpf/: Cargo.toml
tcpconnect/tcpconnect-ebpf/src/: main.rs
tcpconnect/tcpconnect/src/: main.rs
tcpconnect/xtask/src/: build_ebpf.rs  codegen.rs  run.rs
tracepoint/: Cargo.toml  README.md
tracepoint/.vim/: coc-settings.json
tracepoint/tracepoint/: Cargo.toml
tracepoint/tracepoint-common/: Cargo.toml
tracepoint/tracepoint-ebpf/: Cargo.toml
tracepoint/tracepoint-ebpf/src/: bindings.rs  main.rs  tcp_states.rs  vmlinux.rs
tracepoint/tracepoint/src/: main.rs
tracepoint/xtask/src/: build_ebpf.rs  codegen.rs  run.rs
usdt/: Cargo.toml  README.md
usdt/src/: main.rs
