[package]
name = "tracepoint"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
tracepoint-common = { path = "../tracepoint-common", features = ["user"] }
anyhow = "1.0.68"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1.3"
clap = { version = "4.1", features = ["derive"] }


[[bin]]
name = "tracepoint"
path = "src/main.rs"
